Added header.ejs and footer.ejs files

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>RadioVis Stomp Server Admin</title>
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/main.css">
-
-</head>
-<body>
+<%- include header.ejs %>
 
 <div class="container">
   <h1>RadioVis Stomp Server Admin</h1>
@@ -24,5 +11,4 @@
   </dl>
 </div>
 
-</body>
-</html>
+<%- include footer.ejs %>
