--- a/views/info.ejs
+++ b/views/info.ejs
@@ -9,6 +9,23 @@
     <dt>OS Uptime:</dt> <dd><%= osUptime %></dd>
     <dt>Load Average:</dt> <dd><%= loadAvg %></dd>
   </dl>
+  
+  
+  <table>
+    <tr>
+      <th>Service Name</th>
+      <th>Bearers</th>
+      <th>Connected Clients</th>
+    </tr>
+    <% for(var serviceId in services) { %>
+      <tr>
+        <td><%= services[serviceId].name %></td>
+        <td><%= services[serviceId].bearers.length %></td>
+        <td>?</td>
+      </tr>
+    <% } %>
+  
+  </table>
 </div>
 
 <%- include footer.ejs %>
