Updated to the latest version of ejs

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -1,4 +1,4 @@
-<%- include header.ejs %>
+<%- include('header.ejs') %>
 
 <div class="container">
   <h1>RadioVis Stomp Server Admin</h1>
@@ -28,4 +28,4 @@
   </table>
 </div>
 
-<%- include footer.ejs %>
+<%- include('footer.ejs') %>
