--- a/views/service.ejs
+++ b/views/service.ejs
@@ -1,4 +1,4 @@
-<%- include header.ejs %>
+<%- include('header.ejs') %>
 
 <div class="container">
   <h1>RadioVis: <%= service.name %></h1>
@@ -20,4 +20,4 @@
   
 </div>
 
-<%- include footer.ejs %>
+<%- include('footer.ejs') %>
