--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/favicon.ico" />
 
 </head>
 <body>
